--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head> <title>Shazia</title>
 Hi!  I am Shazia Imam. 
 </head>
-<body style="background-image: url('https://th.bing.com/th/id/R.22d4920419a4c4a55817c7b725e9c2e6?rik=p3aPW5vGz71GoQ&riu=http%3a%2f%2fthewowstyle.com%2fwp-content%2fuploads%2f2015%2f03%2fcloseup-leaves-water-drops-wallpaper-for-1920x1080-hdtv-1080p-18-168.jpg&ehk=dYUT9SIbs2k%2f%2bVQMd5PsoFzPQJwgJRF55oBXPeyVluU%3d&risl=&pid=ImgRaw&r=0');>
+<body style="background-image: url('https://th.bing.com/th/id/R.22d4920419a4c4a55817c7b725e9c2e6?rik=p3aPW5vGz71GoQ&riu=http%3a%2f%2fthewowstyle.com%2fwp-content%2fuploads%2f2015%2f03%2fcloseup-leaves-water-drops-wallpaper-for-1920x1080-hdtv-1080p-18-168.jpg&ehk=dYUT9SIbs2k%2f%2bVQMd5PsoFzPQJwgJRF55oBXPeyVluU%3d&risl=&pid=ImgRaw&r=0');">
 <h2>Page under construction......</h2>
 
 </body>
